Fixed bug where download version "jumped" visually on hover

--- a/assets/css/admin.less
+++ b/assets/css/admin.less
@@ -400,7 +400,7 @@ table.wp-list-table {
         }
         .handlediv {
           background-position: 6px 5px !important;
-          display: none;
+          display: none !important;
           height: 24px;
         }
       }
